# doc-intelligence

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run_api.py  run_streamlit.py
.github/workflows/: test.yml
analysis/: plot_results.py
app/: streamlit_app.py  streamlit_cloud.py
benchmarks/: benchmark_retrieval.py
configs/: default.yaml
docker/: Dockerfile  docker-compose.yml
docs/: architecture_decisions.md  system_design.md
eval_data/: evaluation_dataset.json
eval_data/documents/: acme_quarterly_report.txt  cloudscale_docs.txt  nexus_product_docs.txt  startup_pitch.txt  techcorp_annual_report.txt
experiments/001_baseline/: README.md  notes.md
experiments/002_chunking/: README.md  notes.md
experiments/003_hybrid_search/: README.md
experiments/004_reranking/: README.md
experiments/005_hyde/: README.md
experiments/006_evaluation/: notes.md
experiments/006_evaluation/results/: baseline_evaluation.json  comparison_summary.json  hybrid_evaluation.json  hyde_evaluation.json  semantic_evaluation.json
experiments/007_hallucination/: README.md  notes.md
experiments/docs/: architecture_decisions.md
src/docint/: __init__.py  config.py  logging_config.py  pipeline.py
src/docint/api/: main.py
src/docint/embeddings/: __init__.py  base.py  openai.py
src/docint/evaluation/: __init__.py  dataset.py  evaluator.py  metrics.py
src/docint/generation/: __init__.py  generator.py  prompts.py
src/docint/ingest/: __init__.py  chunkers.py  loaders.py
src/docint/retrieval/: __init__.py  bm25.py  hybrid.py  hyde.py  reranker.py  retriever.py
src/docint/store/: __init__.py  base.py  chroma.py
tests/: __init__.py  test_baseline.py  test_chunker.py  test_evaluation.py  test_full_comparison.py  test_hallucination.py  test_hybridsearch.py  test_hyde.py  test_recursive.py  test_reranker.py  test_retriever.py  test_save_all_results.py
(+2 files in other folders)
